maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: ';' expected but ',' found.
    return x,y   
            ^JediEscaper:26: error: ';' expected but ',' found.
	x,y = trouveSortie
         ^